virtualservice/bookinfo-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: default
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /productpage
    name: product
    rewrite:
      uri: /
    route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
