virtualservice/squid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: squid
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /
    name: squid
    route:
    - destination:
        host: squid
        port:
          number: 7834
